todoApp/manifests/svc-with-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: todo-app
      protocol: TCP
      port: 1234
      targetPort: 8080
    - name: todo-backend
      protocol: TCP
      port: 1235
      targetPort: 8081
