todoApp/manifests/ing-with-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /todo
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 1234
          - path: /todo-api
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 1235
          - path: /cached.jpg
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 1234
